--- a/Agrupando Seletores.html
+++ b/Agrupando Seletores.html
@@ -1,4 +1,5 @@
 <html>
+  
 <head>
 <style>
 h1, h2, p {
@@ -9,9 +10,12 @@ h1, h2, p {
 </head>
     
 <body>
-<h1>Pseudonimização</h1>
-<p>A técnica de substituir um identificador com um valor não relacionado, mas ainda assim tipicamente único Ex. substituir “Joshua Quek” por “274927473”</p> 
-<h2> Quase-identificador</h2>    
-<p>Também chamado de quási-identificador. Um atributo de dados que, por si só, não identifica um individuo, mas pode fazê-lo em combinação com outra informação.</p>
+  
+<h1>Agrupar seletores</h1>
+<p>Agrupando os seletores no "style" poupa linhas de códigos.</p> 
+<h2>Permitindo</h2>    
+<p>Que várias linhas sejam formatadas da mesma forma.</p>
+  
 </body>
+
 </html>
