--- a/Bordas coloridas.html
+++ b/Bordas coloridas.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html>
+  
 <head>
 <style>
 p.one {
   border-style:solid;
-  border-color: red green blue pink; /* vermelho top, verde direita, azul bottom and rosa esquerda*/
+  border-color: red green blue pink; /* vermelho top, verde direita, azul bottom e rosa esquerda*/
 }
-
-
 </style>
 </head>
+  
 <body>
 
-<h2>Propriedade border-color</h2>
-<p>A propriedade border-color pode ter 4 valores(borda: top, direita, botton e esquerda)</p>
-
-<p class="one">Borda sólida colorida</p>
+<h2> Propriedade border-color </h2>
+<p> A propriedade border-color pode ter 4 valores(borda: top, direita, bottom e esquerda) </p>
+<p class="one"> Borda sólida colorida </p>
 
 </body>
+  
 </html>
