--- a/Bordas.html
+++ b/Bordas.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+	
 <head>
-	<meta charset="utf-8">
-	<meta name="author" content="Fulano">
-	<meta name="description" content="link de imagem">
-	<meta name="keywords" content="crm, gestão, pessoas">
-	<title>bordas</title>
-  
 <style>
 	p.dotted {border-style: dotted;}
 	p.dashed {border-style: dashed;}
@@ -20,21 +15,20 @@
 	p.hidden {border-style: hidden;}
 	p.mix {border-style: dotted dashed solid double;}
 </style>
-  
 </head>
 
 <body>
-<p class="dotted">A dotted border.</p>
-<p class="dashed">A dashed border.</p>
-<p class="solid">A solid border.</p>
-<p class="double">A double border.</p>
-<p class="groove">A groove border.</p>
-<p class="ridge">A ridge border.</p>
-<p class="inset">An inset border.</p>
-<p class="outset">An outset border.</p>
+<p class="dotted">Borda pontilhada.</p>
+<p class="dashed">Borda tracejada.</p>
+<p class="solid">Borda sólida.</p>
+<p class="double">Borda dupla.</p>
+<p class="groove">Borda ranhura.</p>
+<p class="ridge">Borda cume.</p>
+<p class="inset">Borda acima.</p>
+<p class="outset">Borda abaixo.</p>
 <p class="none">No border.</p>
-<p class="hidden">A hidden border.</p>
-<p class="mix">A mixed border.</p>
+<p class="hidden">Sem borda.</p>
+<p class="mix">Borda mixa.</p>
 </body>
   
 </html>
