--- a/CSS - Classe 1.html
+++ b/CSS - Classe 1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  
 <head>
 <style>
 .center {
@@ -8,12 +9,12 @@
 }
 </style>
 </head>
+  
 <body>
 
-<h1 class="center">Re-identificação</h1>
-<p class="center">Identificar uma pessoa de um conjunto de dados anonimizado. A re-identificação espontânea
-refere-se à re-identificação não intencional devido ao domínio de conhecimento particular sobre indivíduos..</p> 
-    <p>proteção de dados</p>
+<h1 class="center">Classe1</h1>
+<p class="center">A identificação universal ".center" funciona onde for incluida, pois não há especificações. </p> 
+<p>Se não for especificada na linha, não funciona.</p>
 
 </body>
 </html>
