--- a/CSS - Classe 2.html
+++ b/CSS - Classe 2.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
 <head>
 <style>
@@ -8,12 +9,13 @@ p.center {
 }
 </style>
 </head>
+  
 <body>
 
-<h1 class="center">Re-identificação</h1>
-<p class="center">Identificar uma pessoa de um conjunto de dados anonimizado. A re-identificação espontânea
-refere-se à re-identificação não intencional devido ao domínio de conhecimento particular sobre indivíduos..</p> 
-    <p class="center">olá</p>
+<h1 class="center">Classe 2</h1>
+<p class="center">Mesmo que inclusa em "H1", não funciona.</p> 
+<p class="center">Pois no style é especificada apenas para parágrafos que utilizarem a mesma.</p>
 
 </body>
+  
 </html>
