--- a/CSS Externo.html
+++ b/CSS Externo.html
@@ -7,12 +7,11 @@
 	<meta name="keywords" content="css, style"/>
 	<title>Revisão</title>
     <link rel="stylesheet" type="text/css" href="formata.css">
-    
 </head>
     
 <body>
-    <h1> Anonimização de Dados</h1>
-    <p>A conversão de dados pessoais em “dados anonimizados” através da aplicação de um conjunto de técnicas de anonimização.</p>
-   
+    <h1>CSS Externo</h1>
+    <p>A formatação dessa página é puxada no código para transferir as especificações de uma página criada por fora.</p>
 </body>
+	
 </html>
