--- a/CSS In-line.html
+++ b/CSS In-line.html
@@ -10,8 +10,8 @@
     
 <body>
 
-<h1 style="color:blue;text-align:center;">Aprendendo CSS</h1>
-<p style="color:red;">Utilizando propriedade color.</p>
+<h1 style="color:blue;text-align:center;">CSS Usado na linha</h1>
+<p style="color:red;">De diferentes formas.</p>
 
 </body>
 </html>
