--- a/css-externo.html
+++ b/css-externo.html
@@ -6,11 +6,11 @@
 	<meta name="description" content="Introdução CSS">
 	<meta name="keywords" content="css, style"/>
 	<title>Revisão</title>
-    <link rel="stylesheet" type="text/css" href="formata.css">
+    <link rel="stylesheet" type="text/css" href="formata.css"> <!-- o caminho do arquivo e aplica -->
 </head>
     
 <body>
-    <h1>CSS Externo</h1>
+    <h1>CSS Externo</h1> 
     <p>A formatação dessa página é puxada no código para transferir as especificações de uma página criada por fora.</p>
 </body>
 	
