--- a/style-seletores-agrupados.html
+++ b/style-seletores-agrupados.html
@@ -2,7 +2,7 @@
   
 <head>
 <style>
-h1, h2, p {
+h1, h2, p { /* Grupo de seletores que terão a mesma formatação */
   text-align: center;
   color: blue;
 }
