--- a/listas-ordenadas.html
+++ b/listas-ordenadas.html
@@ -4,21 +4,21 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="author" content="Elaine">
-	<meta name="description" content="listas não ordenadas">
+	<meta name="description" content="listas ordenadas">
 	<meta name="keywords" content="ul, li">
 	<title>Listas não Ordenadas</title>
 </head>
 
 <body>
 	<h2>Disciplinas 1º módulo ADS</h2>
-	<ul type="square">
+	<ol type="A"> <!-- sequencia -->
   		<li>Administração</li>
   		<li>Programação em Microinformática</li>
   		<li>Matemática Discreta</li>
         <li>Algoritmos e Lógica de Programação</li>
         <li>Arquitetura e organização de computadores</li>
         <li>Inglês</li>
-	</ul>  
+	</ol> 
 </body>
   
 </html>
